--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,6 +6,7 @@ phases:
       - echo Entered the install phase...
       - apt-get update -y
       - apt-get install -y maven
+      - apt-get install -y docker.io -y
     finally:
       - echo This always runs even if the update or install command fails
   build:
@@ -13,6 +14,7 @@ phases:
       - echo Entered the build phase...
       - echo Build started on `date`
       - mvn clean package
+      - docker build . -t myapp
     finally:
       - echo This always runs even if the install command fails
 
