--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,28 +1,47 @@
 version: 0.2
-
+env:
+  variables:
+    JAVA_HOME: /usr/lib/jvm/java-8-openjdk-amd64
+    AWS_DEFAULT_REGION: us-east-2
+    AWS_ACCOUNT_ID: '932589472370'
+    IMAGE_REPO_NAME: myapp-ecr
+    IMAGE_TAG: latest
+  parameter-store:
+    LOGIN_PASSWORD: /CodeBuild/dockerLoginPassword
 phases:
   install:
     commands:
       - echo Entered the install phase...
       - apt-get update -y
       - apt-get install -y maven
-      - apt-get install -y docker.io -y
     finally:
       - echo This always runs even if the update or install command fails
+  pre_build:
+    commands:
+      - echo Logging in to Amazon ECR...
+      - >-
+        aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login
+        --username AWS --password-stdin
+        $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
   build:
     commands:
-      - echo Entered the build phase...
       - echo Build started on `date`
-      - mvn clean package
-      - docker build . -t myapp
-    finally:
-      - echo This always runs even if the install command fails
-
+      - echo Building the Docker image...
+      - 'docker build -t $IMAGE_REPO_NAME:$IMAGE_TAG .'
+      - >-
+        docker tag $IMAGE_REPO_NAME:$IMAGE_TAG
+        $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
+  post_build:
+    commands:
+      - echo Build completed on `date`
+      - echo Pushing the Docker image...
+      - >-
+        docker push
+        $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
 artifacts:
   files:
     - target/alpha.war
   discard-paths: 'yes'
-
 cache:
   paths:
     - /root/.m2/**/*
